2013-10-01 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Misc/NSObjectAdditions.m
	Import GNUstep runtime patches, but keep old Mac code.

2005-09-06 Andy Ruder <aeruder at ksu dot edu>
 * TalkSoup 1.0alpha 

2005-07-14 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput/BundlePreferences: Moved help text to external file,
 corrected help text.  Corrected NSTableView handling...

 * GNUstepOutput/Misc: Added code to debug NSView hierarchies

 * GNUstepOutput: Complete overhaul of NSTextView initializations, fixing
 of some corrupted gorms, making text field take on chat font, and other 
 bug fixes.
 
2005-07-12 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput
   NetclassesInput: Made changes to allow default quit message to work
   when quitting the app, closing a window, and /quit.

2005-07-07 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Moved to using distributed notifications instead of 
 distributed objects.
 * GNUstepOutput: Fix autoresize of nickview
 * GNUstepOutput: Fix tab completion picking up noncommand commandTyping:

2005-06-27 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: The NSTextField was much too much of a pain to use anymore.
 I've replaced the typing view full out with a KeyTextView which I think will
 also allow OS X to work sanely.

2005-06-26 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: On OS X focusing a textfield causes the action to be sent.
 This was causing the messages to be sent everytime the window was made key.
 Instead I am now trapping the key in the field editor so that it works 
 correctly on OS X and GNUstep.

2005-06-25 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Fixed serverlist focusing issues.  When you remove a server
 it won't always scroll to the top.

 * GNUstepOutput: Added 5 .nibs (special thanks to Aaron Glenn for doing this
 over IRC ;)

2005-06-24 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: There was a bug in the sorting code for the userlist.
 